2004-04-16  Jody Goldberg <jody@gnome.org>

	From paolo borelli :
	http://bugzilla.gnome.org/show_bug.cgi?id=139723
	* gnome-keybinding-properties.c (accel_edited_callback) : fix leak

2004-04-15  Jody Goldberg <jody@gnome.org>

	* Release 2.6.1

2004-04-15  Jody Goldberg <jody@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=139605
	* eggcellrendererkeys.c (grab_key_callback) : mouse buttons should not
	  be valid modifiers.

2004-04-06  Jody Goldberg <jody@gnome.org>

	* gnome-keybinding-properties.c (cb_check_for_uniqueness) : Really fix
	  this time to capture the vagaries of keys with and without names.

2004-04-01  Jody Goldberg <jody@gnome.org>

	* Release 2.6.0.3

2004-04-01  Jody Goldberg <jody@gnome.org>

	* gnome-keybinding-properties.c (accel_edited_callback) : Use a cancel
	  button on the 'already used' dialog so that escape will close it.
	(cb_check_for_uniqueness) : fix brokeness.  It is entirely possible
	  for keycode on loaded keys to be '0'

2003-12-30  Sven Herzberg <herzi@gnome-de.org>

	* capplets/keybindings/eggcellrendererkeys.c : change the "Type a
	new accelerator..." tooltip to a shorter form "<New accelerator...>".
	* capplets/keybindings/gnome-keybindings-properties.gladei : add an
	explanation on how use the capplet.
	This is based upon the work of Emmanuel Pacaud
	<emmanuel.pacaud@univ-poitiers.fr>

2004-03-30  Jody Goldberg <jody@gnome.org>

	* Release 2.6.0.1

2004-03-23  Jody Goldberg <jody@gnome.org>

	* Release 2.6.0

2004-03-22  Jody Goldberg <jody@gnome.org>

	* gnome-keybinding-properties.c (reload_key_entries) : split the
	  obvious media keys into a distinct category.  Call it 'Sound' to
	  avoid string freeze problems.

2004-03-11  Jody Goldberg <jody@gnome.org>

	* Release 2.5.4

2004-02-17  Jody Goldberg <jody@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=128164
	* gnome-keybinding-properties.c (accel_edited_callback) : don't use
	  get_real_model.  The selection is based on the sorted model.