@@ -1,3 +1,12 @@
+2004-05-09 Jody Goldberg <jody@gnome.org>
+
+	For : Michael Terry <mike@mterry.name>
+	http://bugzilla.gnome.org/show_bug.cgi?id=99529
+	* gnome-keybinding-properties.c : remove functions dealing with
+	  the keyboard theme
+	* gnome-keybinding-properties.glade : remove keyboard theme option
+	  box and keyboard shortcut label
+
 2004-04-16  Jody Goldberg <jody@gnome.org>
 
 	From paolo borelli :
